BACKGROUND: updated icon colors to all be the github black colour - NAVBAR: fixed responsive icon/text sizing, and anything above width of phone makes the icon and text flex-direction change from 'column' to 'row' - PORTFOLIO: updated the placeholder text to larger font and fixed so fits in width of <input> box, increaed font size of <h4> titles on each project button to become readable (especially on mobile)

--- a/src/components/Background/Background.module.scss
+++ b/src/components/Background/Background.module.scss
@@ -6,7 +6,7 @@
 .backgroundWrapper {
   background: white;
 
-  padding: 0 20px 20px;
+  padding: 0 40px 20px;
 
   // padding-bottom: 20px;
   margin: 6vh 3vw;
@@ -90,7 +90,8 @@
       p {
         // color: set-text-color($dark-colour);
         line-height: 1.8rem;
-        padding: 0 10px;
+        font-size: 1rem;
+        // padding: 0 20px;
         text-align: justify;
       }
 
