--- a/src/components/Portfolio/Portfolio.module.scss
+++ b/src/components/Portfolio/Portfolio.module.scss
@@ -50,6 +50,7 @@
       min-width: 260px;
       outline: none;
       border: 2px solid $colour1;
+      font-size: 1rem;
 
       &:focus {
         border: 2px solid $colour1-50;
@@ -83,6 +84,10 @@
       background: rgba(255, 255, 255, 0.9);
       border-radius: 10px;
       box-shadow: 0 5px 8px 0 rgba(255, 255, 255, 0.3), 0 7px 20px 0 rgba(255, 255, 255, 0.3);
+
+      h4 {
+        font-size: 1.2rem;
+      }
 
       // &:hover {
       //   background: linear-gradient(217deg, rgba(255, 0, 0, 0.8), rgba(255, 0, 0, 0) 70.71%), linear-gradient(127deg, rgba(0, 255, 0, 0.8), rgba(0, 255, 0, 0) 70.71%), linear-gradient(336deg, rgba(0, 0, 255, 0.8), rgba(0, 0, 255, 0) 70.71%), url(${imageFile.image}) no-repeat center center/cover;
