--- a/src/components/Skills/Skills.module.scss
+++ b/src/components/Skills/Skills.module.scss
@@ -19,6 +19,7 @@
 
   p {
     padding: 0 30px 10px;
+    font-size: 1rem;
   }
 
   .items {
