--- a/src/sass/_variables.scss
+++ b/src/sass/_variables.scss
@@ -125,11 +125,11 @@ $github: #2b3137;
 }
 
 .space {
-  color: $python;
+  color: $github;
 }
 
 .chemistry {
-  color: $git;
+  color: $github;
 }
 
 // LINEAR GRADIENTS
